--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.unihalle.informatik.MiToBo</groupId>
   <artifactId>mitobo</artifactId>
-  <version>1.6</version>
+  <version>1.6.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>mitobo</name>
@@ -622,8 +622,8 @@
   </dependencies>
 
   <scm>
-    <connection>scm:git:https://trac.informatik.uni-halle.de/git/mitoboGit</connection>
-    <developerConnection>scm:git:https://trac.informatik.uni-halle.de/git/mitoboGit</developerConnection>
+    <connection>scm:git:https://github.com/mitobo-hub/mitobo.git</connection>
+    <developerConnection>scm:git:https://github.com/mitobo-hub/mitobo.git</developerConnection>
   </scm>
 
   <profiles>
