--- a/pom.xml
+++ b/pom.xml
@@ -440,8 +440,8 @@
     </repository>
     <repository>
       <id>snapshots</id>
-      <name>Archiva Snapshot Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots/</url>
+      <name>Archiva Public Snapshot Repository on 'moon'</name>
+      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
       <layout>default</layout>
     </repository>
     <repository>
@@ -466,8 +466,8 @@
     </pluginRepository>
     <pluginRepository>
       <id>snapshots</id>
-      <name>Archiva Snapshot Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots/</url>
+      <name>Archiva Public Snapshot Repository on 'moon'</name>
+      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
       <layout>default</layout>
     </pluginRepository>
     <pluginRepository>
@@ -593,7 +593,7 @@
     <dependency>
       <groupId>de.unihalle.informatik.Alida</groupId>
       <artifactId>alida</artifactId>
-      <version>2.6</version>
+      <version>2.6.1-SNAPSHOT</version>
       <scope>compile</scope>
       <exclusions>
 	<exclusion>
@@ -635,8 +635,8 @@
       <distributionManagement>
 	<snapshotRepository>
 	  <id>snapshots</id>
-	  <name>Archiva Snapshot Repository on 'moon'</name>
-	  <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots/</url>
+	  <name>Archiva Public Snapshot Repository on 'moon'</name>
+	  <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
 	</snapshotRepository>
 	<repository>
 	  <id>internal</id>
@@ -653,8 +653,8 @@
       <distributionManagement>
 	<snapshotRepository>
 	  <id>snapshots</id>
-	  <name>Archiva Snapshot Repository on 'moon'</name>
-	  <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots/</url>
+	  <name>Archiva Public Snapshot Repository on 'moon'</name>
+	  <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
 	</snapshotRepository>
 	<repository>
 	  <id>releases</id>
