--- a/pom.xml
+++ b/pom.xml
@@ -348,7 +348,7 @@
 	</executions>
       </plugin>
 
-      <!-- configuration to run MiToBo via mvn exec:exec -->
+      <!-- configuration to run MiToBo Grappa via mvn exec:exec -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -365,21 +365,16 @@
 	  <classpathScope>runtime</classpathScope>
           <arguments>
 	    <argument>-classpath</argument>
-            <!-- automatically creates the classpath using all project dependencies,
-                 also adding the project build directory -->
             <classpath/>
 	    <argument>-Xms2048m</argument>
 	    <argument>-Xmx2048m</argument>
 	    <argument>-Djava.library.path=target/natives/${native.libdir}</argument>
 	    <argument>-Dalida.versionprovider_class=de.unihalle.informatik.Alida.version.ALDVersionProviderGit</argument>
 	    <argument>-Dalida.oprunner.level=standard</argument>
-            <argument>ij.ImageJ</argument>
-            <argument>-ijpath</argument>
-            <argument>..</argument>
+            <argument>de.unihalle.informatik.Alida.tools.ALDGrappaRunner</argument>
           </arguments>
         </configuration>
       </plugin>
-
     </plugins>
 
     <pluginManagement>
