--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.unihalle.informatik.MiToBo</groupId>
   <artifactId>mitobo</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.6.1-jre7-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>mitobo</name>
@@ -225,8 +225,8 @@
 	<artifactId>maven-compiler-plugin</artifactId>
 	<version>3.3</version>
 	<configuration>
-	  <source>1.6</source>
-	  <target>1.6</target>
+	  <source>1.7</source>
+	  <target>1.7</target>
 	  <encoding>${project.build.sourceEncoding}</encoding>
 	  <!-- Disable annotation processors during normal compilation! -->
 	  <compilerArgument>-proc:none</compilerArgument>
