--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,22 @@
 
   <groupId>de.unihalle.informatik.MiToBo</groupId>
   <artifactId>mitobo</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.7</version>
   <packaging>jar</packaging>
 
   <name>mitobo</name>
   <description>MiToBo - A Microscope Image Analysis TOolBox</description> 
   <url>http://www.informatik.uni-halle.de/mitobo</url>
   <inceptionYear>2010</inceptionYear>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <YEAR>2015</YEAR>
+    <!-- define a default native directory, does not work in all cases,
+	 but avoids that Maven fails completely -->
+    <native.libdir>lib64</native.libdir>
+    <alida.version>2.6.1</alida.version>
+  </properties>
 
   <licenses>
     <license>
@@ -78,14 +87,6 @@
       <timezone>+1</timezone>
     </developer>
   </developers>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <YEAR>2015</YEAR>
-    <!-- define a default native directory, does not work in all cases,
-	 but avoids that Maven fails completely -->
-    <native.libdir>lib64</native.libdir>
-  </properties>
 
   <build>
     <plugins>
@@ -592,7 +593,7 @@
     <dependency>
       <groupId>de.unihalle.informatik.Alida</groupId>
       <artifactId>alida</artifactId>
-      <version>2.6.1-SNAPSHOT</version>
+      <version>${alida.version}</version>
       <scope>compile</scope>
       <exclusions>
 	<exclusion>
