--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.7</version>
+	<dependencies>
+	  <dependency>
+	    <groupId>org.apache.maven.shared</groupId>
+	    <artifactId>maven-filtering</artifactId>
+	    <version>1.3</version>
+	  </dependency>
+	</dependencies>
         <executions>
           <!-- files needed for execution -->
           <execution>
@@ -215,7 +222,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.3</version>
+	<version>3.5.1</version>
 	<configuration>
 	  <source>1.8</source>
 	  <target>1.8</target>
@@ -256,7 +263,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.18.1</version>
+	<version>2.19.1</version>
 	<configuration>
          <excludes>
             <exclude>**/TestMTBLevelsetFunctionPDE.java</exclude>
@@ -274,13 +281,13 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-site-plugin</artifactId>
-	<version>3.4</version>
+	<version>3.5</version>
       </plugin>
       <plugin>
 	<!-- package binaries and sources into zip files;
 	     Attention: here we use our own assembly descriptors! -->
 	<artifactId>maven-assembly-plugin</artifactId>
-	<version>2.5.4</version>
+	<version>2.6</version>
 	<configuration>
 	  <descriptors>
 	    <descriptor>src/main/assembly/mitobo-bin.xml</descriptor>
@@ -480,7 +487,7 @@
       <dependency>
 	<groupId>net.imagej</groupId>
 	<artifactId>pom-imagej</artifactId>
-	<version>14.4.1</version>
+	<version>14.6.2</version>
 	<type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -516,12 +523,12 @@
       <artifactId>jama</artifactId>
       <version>1.0.3</version>
     </dependency>
-		<dependency>
-			<groupId>org.ejml</groupId>
-			<artifactId>all</artifactId>
-			<version>0.27</version>
-		</dependency>
-		<dependency>
+    <dependency>
+      <groupId>org.ejml</groupId>
+      <artifactId>all</artifactId>
+      <version>0.29</version>
+    </dependency>
+    <dependency>
       <groupId>tw.edu.ntu.csie</groupId>
       <artifactId>libsvm</artifactId>
       <version>3.1</version>
@@ -532,22 +539,16 @@
       <version>0.9-6</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <!-- used for numerical calculations, e.g., in vesselness package -->
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.4.1</version>
+      <version>3.6</version>
     </dependency>
     <dependency>
       <!-- used for clustering, e.g., in actin analysis -->
       <groupId>nz.ac.waikato.cms.weka</groupId>
       <artifactId>weka-dev</artifactId>
-      <version>3.7.11</version>
+      <version>3.7.13</version>
     </dependency>
     <dependency>
       <!-- used for data visualization, e.g., in actin analysis -->
@@ -613,6 +614,13 @@
       <groupId>de.unihalle.informatik.MiToBo.native</groupId>
       <artifactId>mitobo-native-${native.libdir}</artifactId>
       <version>1.2</version>
+    </dependency>
+    <!-- Testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
