--- a/pom.xml
+++ b/pom.xml
@@ -494,7 +494,7 @@
       <dependency>
 	<groupId>net.imagej</groupId>
 	<artifactId>pom-imagej</artifactId>
-	<version>15.6.0</version>
+	<version>16.6.0</version>
 	<type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -533,7 +533,7 @@
     <dependency>
       <groupId>com.googlecode.efficient-java-matrix-library</groupId>
       <artifactId>ejml</artifactId>
-      <version>0.24</version>
+      <version>0.25</version>
     </dependency>
 <!--
     <dependency>
@@ -556,13 +556,13 @@
       <!-- used for numerical calculations, e.g., in vesselness package -->
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.6</version>
+      <version>3.6.1</version>
     </dependency>
     <dependency>
       <!-- used for clustering, e.g., in actin analysis -->
       <groupId>nz.ac.waikato.cms.weka</groupId>
-      <artifactId>weka-dev</artifactId>
-      <version>3.7.13</version>
+      <artifactId>weka-stable</artifactId>
+      <version>3.8.0</version>
     </dependency>
     <dependency>
       <!-- used for data visualization, e.g., in actin analysis -->
