--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <!-- define a default native directory, does not work in all cases,
 	 but avoids that Maven fails completely -->
     <native.libdir>lib64</native.libdir>
-    <alida.version>2.7.3-SNAPSHOT</alida.version>
-    <alida.mitobo.help.version>1.7-SNAPSHOT</alida.mitobo.help.version>
+    <alida.version>2.7.3</alida.version>
+    <alida.mitobo.help.version>1.6</alida.mitobo.help.version>
   </properties>
 
   <licenses>
