--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <native.libdir>lib64</native.libdir>
     <alida.version>2.7.5-SNAPSHOT</alida.version>
     <alida.mitobo.help.version>1.7-SNAPSHOT</alida.mitobo.help.version>
+    <mitobo.xml.version>2.1</mitobo.xml.version>
   </properties>
 
   <licenses>
@@ -227,7 +228,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.6.1</version>
+	<version>3.7.0</version>
 	<configuration>
 	  <source>1.8</source>
 	  <target>1.8</target>
@@ -240,7 +241,6 @@
 	<!-- run annotation processing -->
 	<groupId>org.bsc.maven</groupId>
 	<artifactId>maven-processor-plugin</artifactId>
-<!--	<version>3.1.0</version> requires Maven 3.1 -->
 	<version>3.3.1</version>
 	<executions>
 	  <execution>
@@ -293,7 +293,7 @@
 	<!-- package binaries and sources into zip files;
 	     Attention: here we use our own assembly descriptors! -->
 	<artifactId>maven-assembly-plugin</artifactId>
-	<version>3.0.0</version>
+	<version>3.1.0</version>
 	<configuration>
 	  <descriptors>
 	    <descriptor>src/main/assembly/mitobo-bin.xml</descriptor>
@@ -425,14 +425,6 @@
   </build>
 
   <repositories>
-<!--
-    <repository>
-      <id>jboss</id>
-      <name>JBoss Thirdparty Releases</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
-      <layout>default</layout>
-    </repository>
--->
     <repository>
       <id>central</id>
       <name>Maven Central Repository</name>
@@ -491,19 +483,10 @@
 
   <dependencyManagement>
     <dependencies>
-      <!--
-      <dependency>
-	<groupId>net.imagej</groupId>
-	<artifactId>pom-imagej</artifactId>
-	<version>17.0.0</version>
-	<type>pom</type>
-        <scope>import</scope>
-	</dependency>
-	-->
       <dependency>
 	<groupId>org.scijava</groupId>
 	<artifactId>pom-scijava</artifactId>
-	<version>16.1.0</version>
+	<version>17.0.0-SNAPSHOT</version>
 	<type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -519,21 +502,10 @@
       <groupId>ome</groupId>
       <artifactId>formats-api</artifactId>
     </dependency>
-<!--
-    <dependency>
-      <groupId>ome</groupId>
-      <artifactId>formats-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>ome</groupId>
-      <artifactId>ome-xml</artifactId>
-    </dependency>
--->
     <dependency>
       <groupId>ome</groupId>
       <artifactId>formats-bsd</artifactId>
     </dependency>
-
     <dependency>
       <groupId>gov.nist.math</groupId>
       <artifactId>jama</artifactId>
@@ -542,15 +514,8 @@
     <dependency>
       <groupId>com.googlecode.efficient-java-matrix-library</groupId>
       <artifactId>ejml</artifactId>
-      <version>0.25</version>
+      <version>0.24</version>
     </dependency>
-<!--
-    <dependency>
-      <groupId>org.ejml</groupId>
-      <artifactId>all</artifactId>
-      <version>0.29</version>
-    </dependency>
--->
     <dependency>
       <groupId>tw.edu.ntu.csie</groupId>
       <artifactId>libsvm</artifactId>
@@ -607,7 +572,7 @@
     <dependency>
       <groupId>de.unihalle.informatik.MiToBo</groupId>
       <artifactId>mitobo-xml</artifactId>
-      <version>2.0</version>
+      <version>${mitobo.xml.version}</version>
     </dependency>
     <dependency>
       <groupId>de.unihalle.informatik.Alida</groupId>
@@ -690,8 +655,8 @@
   </profiles>
 
   <issueManagement>
-    <system>MantisBT</system>
-    <url>http://www2.informatik.uni-halle.de/agprbio/mitobo-bts/main_page.php</url>
+    <system>Github Issue Tracking</system>
+    <url>https://github.com/mitobo-hub/mitobo/issues</url>
   </issueManagement>
 
 </project>
