--- a/pom.xml
+++ b/pom.xml
@@ -486,7 +486,7 @@
       <dependency>
 	<groupId>org.scijava</groupId>
 	<artifactId>pom-scijava</artifactId>
-	<version>17.0.0-SNAPSHOT</version>
+	<version>17.0.0</version>
 	<type>pom</type>
         <scope>import</scope>
       </dependency>
