Switched to new MiToBo parent POM file for unifying the handling of versions of dependencies and Maven plugins over various projects, updated to mitobo-xml 2.2-SNAPSHOT.

--- a/pom.xml
+++ b/pom.xml
@@ -12,93 +12,23 @@
   <url>http://www.informatik.uni-halle.de/mitobo</url>
   <inceptionYear>2010</inceptionYear>
 
+  <parent>
+    <groupId>de.unihalle.informatik.MiToBo</groupId>
+    <artifactId>mitobo-pom</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <YEAR>2018</YEAR>
-    <!-- specify versions of dependencies -->
-    <alida.version>2.7.6-SNAPSHOT</alida.version>
-    <alida.mitobo.help.version>1.8-SNAPSHOT</alida.mitobo.help.version>
     <mitobo.native.version>1.2</mitobo.native.version>
-    <mitobo.xml.version>2.1</mitobo.xml.version>
-    <commons.math.version>3.6.1</commons.math.version>
-    <ejml.version>0.24</ejml.version>
-    <geopolygons.version>4.0</geopolygons.version>
-    <jama.version>1.0.3</jama.version>
-    <jfreechart.version>1.0.19</jfreechart.version>
-    <jri.version>0.9-9</jri.version>
-    <jstacs.version>2.2</jstacs.version>
-    <junit.version>4.12</junit.version>
-    <libsvm.version>3.17</libsvm.version>
-    <scijava.version>19.2.0</scijava.version>
-    <weka.version>3.9.1</weka.version>
-    <!-- define a default native directory, does not work in all cases,
-	 but avoids that Maven fails completely -->
-    <native.libdir>lib64</native.libdir>
+    <mitobo.xml.version>2.2-SNAPSHOT</mitobo.xml.version>
   </properties>
-
-  <licenses>
-    <license>
-      <name>GNU General Public License version 3.0</name>
-      <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
-    </license>
-  </licenses>
-
-  <organization>
-    <name>Martin Luther University Halle-Wittenberg</name>
-    <url>http://www.uni-halle.de</url>
-  </organization>
-
-  <developers>
-    <developer>
-      <id>moeller</id>
-      <email>birgit.moeller@informatik.uni-halle.de</email>
-      <name>Birgit Moeller</name>
-      <organization>Martin Luther University Halle-Wittenberg</organization>
-      <organizationUrl>http://www.informatik.uni-halle.de/moeller</organizationUrl>
-      <roles>
-	<role>Developer</role>
-      </roles>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>posch</id>
-      <email>stefan.posch@informatik.uni-halle.de</email>
-      <name>Stefan Posch</name>
-      <organization>Martin Luther University Halle-Wittenberg</organization>
-      <organizationUrl>http://www.informatik.uni-halle.de/posch</organizationUrl>
-      <roles>
-	<role>Developer</role>
-      </roles>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>glass</id>
-      <email>markus.glass@medizin.uni-halle.de</email>
-      <name>Markus Glass</name>
-      <organization>Martin Luther University Halle-Wittenberg</organization>
-      <roles>
-	<role>Developer</role>
-      </roles>
-      <timezone>+1</timezone>
-    </developer>
-    <developer>
-      <id>misiak</id>
-      <email>danny.misiak@informatik.uni-halle.de</email>
-      <name>Danny Misiak</name>
-      <organization>Martin Luther University Halle-Wittenberg</organization>
-      <roles>
-	<role>Developer</role>
-      </roles>
-      <timezone>+1</timezone>
-    </developer>
-  </developers>
 
   <build>
     <plugins>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.0.2</version>
       	<configuration>
 	  <includeEmptyDirs>true</includeEmptyDirs>
 	</configuration>
@@ -106,7 +36,7 @@
 	  <dependency>
 	    <groupId>org.apache.maven.shared</groupId>
 	    <artifactId>maven-filtering</artifactId>
-            <version>3.1.1</version> 
+	    <version>${maven.plugin.filtering.version}</version>
 	  </dependency>
 	</dependencies>
         <executions>
@@ -131,13 +61,13 @@
                     <include>revision-mitobo.txt</include>
 	          </includes>
 	          <filtering>true</filtering>
-                  </resource>
+                </resource>
                 <resource>
-	           <directory>src/main/resources</directory>
-	           <excludes>
-                     <exclude>revision-mitobo.txt</exclude>
-	           </excludes>
-	           <filtering>false</filtering>
+	          <directory>src/main/resources</directory>
+	          <excludes>
+                    <exclude>revision-mitobo.txt</exclude>
+	          </excludes>
+	          <filtering>false</filtering>
                 </resource>
               </resources>
             </configuration>
@@ -174,21 +104,12 @@
       <plugin>
         <groupId>de.unihalle.informatik.AlidaMiToBo.maven.plugins.help</groupId>
         <artifactId>comment-parser-maven-plugin</artifactId>
-        <version>1.6</version>
-	<executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>parse-comments</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
+
       <!-- copy dependencies incl. help jar to local folder -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-	<version>3.0.1</version>
         <executions>
           <execution>
             <id>Copy dependency jars</id>
@@ -223,68 +144,30 @@
 	  </execution>
         </executions>
       </plugin>
+
       <!-- update helpset archive and copy files to target/classes -->
       <plugin>
         <groupId>de.unihalle.informatik.AlidaMiToBo.maven.plugins.help</groupId>
         <artifactId>helpset-file-injector-maven-plugin</artifactId>
-        <version>1.4</version>
-	<executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>update-helpset</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.7.0</version>
-	<configuration>
-	  <source>1.8</source>
-	  <target>1.8</target>
-	  <encoding>${project.build.sourceEncoding}</encoding>
-	  <!-- Disable annotation processors during normal compilation! -->
-	  <compilerArgument>-proc:none</compilerArgument>
-	</configuration>
       </plugin>
+
       <plugin>
 	<!-- run annotation processing -->
 	<groupId>org.bsc.maven</groupId>
 	<artifactId>maven-processor-plugin</artifactId>
-	<version>3.3.1</version>
-	<executions>
-	  <execution>
-	    <id>process</id>
-	    <goals>
-	      <goal>process</goal>
-	    </goals>
-	    <phase>generate-sources</phase>
-	    <configuration>
-	      <compilerArguments>-encoding ${project.build.sourceEncoding}</compilerArguments>
-	    </configuration>
-	  </execution>
-	  <execution>
-	    <id>process-test</id>
-	    <goals>
-	      <goal>process-test</goal>
-	    </goals>
-	    <phase>generate-test-sources</phase>
-	    <configuration>
-	      <compilerArguments>-encoding ${project.build.sourceEncoding}</compilerArguments>
-	    </configuration>
-	  </execution>
-	</executions>
       </plugin>
+
       <!-- configure native resources for unit testing -->
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.20</version>
 	<configuration>
-         <excludes>
+          <excludes>
             <exclude>**/TestMTBLevelsetFunctionPDE.java</exclude>
           </excludes>
 	  <forkMode>once</forkMode>
@@ -295,18 +178,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
       </plugin>
+      
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-site-plugin</artifactId>
-	<version>3.6</version>
       </plugin>
+
       <plugin>
 	<!-- package binaries and sources into zip files;
 	     Attention: here we use our own assembly descriptors! -->
 	<artifactId>maven-assembly-plugin</artifactId>
-	<version>3.1.0</version>
 	<configuration>
 	  <descriptors>
 	    <descriptor>src/main/assembly/mitobo-bin.xml</descriptor>
@@ -323,58 +205,17 @@
 	  </execution>
 	</executions>
       </plugin>
+
       <plugin>
 	<!-- package javadocs -->
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-javadoc-plugin</artifactId>
-	<version>2.10.4</version>
-	<configuration>
-	  <javadocVersion>1.8</javadocVersion>
-	  <stylesheet>java</stylesheet>
-          <show>private</show>
-	  <additionalparam>-Xdoclint:none</additionalparam>
-	  <taglets>
-	    <taglet>
-	      <tagletClass>latexlet.InlineLaTeXlet</tagletClass>
-	      <tagletArtifact>
-		<groupId>latexlet</groupId>
-		<artifactId>latexlet</artifactId>
-		<version>1.2f8-SNAPSHOT</version>
-	      </tagletArtifact>
-	    </taglet>
-	    <taglet>
-	      <tagletClass>latexlet.InlineBlockLaTeXlet</tagletClass>
-	      <tagletArtifact>
-		<groupId>latexlet</groupId>
-		<artifactId>latexlet</artifactId>
-		<version>1.2f8-SNAPSHOT</version>
-	      </tagletArtifact>
-	    </taglet>
-	    <taglet>
-	      <tagletClass>latexlet.BlockLaTeXlet</tagletClass>
-	      <tagletArtifact>
-		<groupId>latexlet</groupId>
-		<artifactId>latexlet</artifactId>
-		<version>1.2f8-SNAPSHOT</version>
-	      </tagletArtifact>
-	    </taglet>
-	  </taglets>
-        </configuration>
-	<executions>
-	  <execution>
-	    <id>attach-javadocs</id>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
       </plugin>
 
       <!-- configuration to run MiToBo Grappa via mvn exec:exec -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
         <executions>
           <execution>
             <goals>
@@ -399,100 +240,7 @@
       </plugin>
     </plugins>
 
-    <pluginManagement>
-      <plugins>
-	<!--This plugin's configuration is used to store Eclipse m2e settings only. 
-	    It has no influence on the Maven build itself.-->
-	<plugin>
-	  <groupId>org.eclipse.m2e</groupId>
-	  <artifactId>lifecycle-mapping</artifactId>
-	  <version>1.0.0</version>
-	  <configuration>
-	    <lifecycleMappingMetadata>
-	      <pluginExecutions>
-		<pluginExecution>
-		  <pluginExecutionFilter>
-		    <groupId>
-		      org.apache.maven.plugins
-		    </groupId>
-		    <artifactId>
-		      maven-dependency-plugin
-		    </artifactId>
-		    <versionRange>[2.1,)</versionRange>
-		    <goals>
-		      <goal>copy-dependencies</goal>
-		      <goal>unpack</goal>
-		    </goals>
-		  </pluginExecutionFilter>
-		  <action>
-		    <ignore></ignore>
-		  </action>
-		</pluginExecution>
-	      </pluginExecutions>
-	    </lifecycleMappingMetadata>
-	  </configuration>
-	</plugin>
-      </plugins>
-    </pluginManagement>
-
   </build>
-
-  <repositories>
-    <repository>
-      <id>central</id>
-      <name>Maven Central Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-    </repository>
-    <repository>
-      <id>imagej.public</id>
-      <url>http://maven.imagej.net/content/groups/public</url>
-    </repository>
-    <repository>
-      <id>snapshots</id>
-      <name>Archiva Public Snapshot Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
-      <layout>default</layout>
-    </repository>
-    <repository>
-      <id>releases</id>
-      <name>Archiva Release Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/releases/</url>
-      <layout>default</layout>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>central</id>
-      <name>Maven Central Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>snapshots</id>
-      <name>Archiva Public Snapshot Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
-      <layout>default</layout>
-    </pluginRepository>
-    <pluginRepository>
-      <id>releases</id>
-      <name>Archiva Release Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/releases/</url>
-      <layout>default</layout>
-    </pluginRepository>
-  </pluginRepositories>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>snapshots-pub</id>
-      <name>Archiva Public Snapshot Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
-    </snapshotRepository>
-    <repository>
-      <id>releases</id>
-      <name>Archiva Release Repository on 'moon'</name>
-      <url>https://moon.informatik.uni-halle.de/archiva/repository/releases/</url>
-    </repository>
-  </distributionManagement>
 
   <dependencyManagement>
     <dependencies>
@@ -505,6 +253,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <dependencies>
     <!-- Compile dependencies -->
     <dependency>
@@ -522,46 +271,38 @@
     <dependency>
       <groupId>gov.nist.math</groupId>
       <artifactId>jama</artifactId>
-      <version>${jama.version}</version>
     </dependency>
     <dependency>
       <groupId>com.googlecode.efficient-java-matrix-library</groupId>
       <artifactId>ejml</artifactId>
-      <version>${ejml.version}</version>
     </dependency>
     <dependency>
       <groupId>tw.edu.ntu.csie</groupId>
       <artifactId>libsvm</artifactId>
-      <version>${libsvm.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuiton.thirdparty</groupId>
       <artifactId>JRI</artifactId>
-      <version>${jri.version}</version>
     </dependency>
     <dependency>
       <!-- used for numerical calculations, e.g., in vesselness package -->
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>${commons.math.version}</version>
     </dependency>
     <dependency>
       <!-- used for clustering, e.g., in actin analysis -->
       <groupId>nz.ac.waikato.cms.weka</groupId>
       <artifactId>weka-dev</artifactId>
-      <version>${weka.version}</version>
     </dependency>
     <dependency>
       <!-- used for data visualization, e.g., in actin analysis -->
       <groupId>org.jfree</groupId>
       <artifactId>jfreechart</artifactId>
-      <version>${jfreechart.version}</version>
     </dependency>
     <dependency>
       <!-- used by MTBPolygon2D -->
       <groupId>uk.co.geolib</groupId>
       <artifactId>geopolygons</artifactId>
-      <version>${geopolygons.version}</version>
     </dependency>
     <!-- ImgLib2 dependencies -->
     <dependency>
@@ -580,7 +321,6 @@
     <dependency>
       <groupId>de</groupId>
       <artifactId>jstacs</artifactId>
-      <version>${jstacs.version}</version>
     </dependency>
     <dependency>
       <groupId>de.unihalle.informatik.MiToBo</groupId>
@@ -590,7 +330,6 @@
     <dependency>
       <groupId>de.unihalle.informatik.Alida</groupId>
       <artifactId>alida</artifactId>
-      <version>${alida.version}</version>
       <scope>compile</scope>
       <exclusions>
 	<exclusion>
@@ -602,7 +341,6 @@
     <dependency>
       <groupId>de.unihalle.informatik.AlidaMiToBo</groupId>
       <artifactId>help-resources</artifactId>
-      <version>${alida.mitobo.help.version}</version>
     </dependency>
     <!-- Runtime dependencies -->
     <dependency>
@@ -614,13 +352,11 @@
     <dependency>
       <groupId>de.unihalle.informatik.MiToBo.native</groupId>
       <artifactId>mitobo-native-${native.libdir}</artifactId>
-      <version>${mitobo.native.version}</version>
     </dependency>
     <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -629,43 +365,6 @@
     <connection>scm:git:https://github.com/mitobo-hub/mitobo.git</connection>
     <developerConnection>scm:git:https://github.com/mitobo-hub/mitobo.git</developerConnection>
   </scm>
-
-  <profiles>
-    <!-- architecture dependent settings -->
-    <profile>
-      <id>linux-x86</id>
-      <activation>
-	<os>
-	  <arch>i386</arch>
-	</os>
-      </activation>
-      <properties>
-	<native.libdir>lib32</native.libdir>
-      </properties>
-    </profile>
-    <profile>
-      <id>linux-x64</id>
-      <activation>
-	<os>
-	  <arch>amd64</arch>
-	</os>
-      </activation>
-      <properties>
-	<native.libdir>lib64</native.libdir>
-      </properties>
-    </profile>
-    <profile>
-      <id>win32</id>
-      <activation>
-	<os>
-	  <arch>Windows</arch>
-	</os>
-      </activation>
-      <properties>
-	<native.libdir>win32</native.libdir>
-      </properties>
-    </profile>
-  </profiles>
 
   <issueManagement>
     <system>Github Issue Tracking</system>
