--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,21 @@
 
   </build>
 
+  <repositories>
+    <repository>
+      <id>snapshots</id>
+      <name>Archiva Public Snapshot Repository on 'moon'</name>
+      <url>https://moon.informatik.uni-halle.de/archiva/repository/snapshots-pub/</url>
+      <layout>default</layout>
+    </repository>
+    <repository>
+      <id>releases</id>
+      <name>Archiva Release Repository on 'moon'</name>
+      <url>https://moon.informatik.uni-halle.de/archiva/repository/releases/</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
+      
   <dependencyManagement>
     <dependencies>
       <dependency>
