--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.unihalle.informatik.MiToBo</groupId>
   <artifactId>mitobo</artifactId>
-  <version>1.8.8</version>
+  <version>1.8.9-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>mitobo</name>
@@ -15,11 +15,11 @@
   <parent>
     <groupId>de.unihalle.informatik.MiToBo</groupId>
     <artifactId>mitobo-pom</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
 
   <properties>
-    <mitobo.xml.version>2.2</mitobo.xml.version>
+    <mitobo.xml.version>2.3-SNAPSHOT</mitobo.xml.version>
   </properties>
 
   <build>
