--- a/pom.xml
+++ b/pom.xml
@@ -287,8 +287,8 @@
       <artifactId>jama</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.googlecode.efficient-java-matrix-library</groupId>
-      <artifactId>ejml</artifactId>
+      <groupId>org.ejml</groupId>
+      <artifactId>ejml-core</artifactId>
     </dependency>
     <dependency>
       <groupId>tw.edu.ntu.csie</groupId>
