--- a/pom.xml
+++ b/pom.xml
@@ -381,7 +381,7 @@
   <mailingLists>
     <mailingList>
       <name>Image.sc Forum</name>
-      <archive>https://forum.image.sc/</archive>
+      <archive>https://forum.image.sc/tags/mitobo</archive>
     </mailingList>
   </mailingLists>
 
