--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.unihalle.informatik.MiToBo</groupId>
   <artifactId>mitobo</artifactId>
-  <version>1.8.17</version>
+  <version>1.8.18-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>mitobo</name>
